# usc-trea-members-portal

./: README.md
.devcontainer/: devcontainer.json
streamlit-members/: README.md  app.py  backend_api.py  pyproject.toml
