[project]
name = "streamlit-members"
version = "0.1.0"
description = "USC TREA Members Portal - Enhanced member management system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0"
]
